--- a/study/src/resource/message_jp.properties
+++ b/study/src/resource/message_jp.properties
@@ -1,12 +1,21 @@
 #resource/message.properties
 
-member.regist.title = 
-member.regist.memId = \uC544\uC774\uB514
-member.regist.memPass = \uD328\uC2A4\uC6CC\uB4DC
-member.regist.memName = \uD68C\uC6D0\uC774\uB984
-member.regist.memLike = \uCDE8\uBBF8
-member.regist.memBir = \uC0DD\uC77C
-member.regist.memMail = \uC774\uBA54\uC77C
-member.regist.memo = \uD2B9\uC774\uC0AC\uD56D
-member.regist.submit = \uB4F1\uB85D
-member.regist.reset = \uB9AC\uC14B
+front.welcome = \u3088\u3046\u3053\u305D...
+
+
+member.title = \u4F1A\u54E1\u767B\u9332
+member.memId = ID
+member.memPass = \u30D1\u30B9\u30EF\u30FC\u30C9
+member.memName = u540D\u524D
+member.memLike = \u8DA3\u5473
+member.memBir = \u751F\u5E74\u6708\u65E5
+member.memMail = \u30E1\u30FC\u30EB\u30A2\u30C9\u30EC\u30B9
+member.memo = \u30E1\u30E2
+
+member.regist.title = \u4F1A\u54E1\u767B\u9332
+member.regist.submit = \u63D0\u51FA
+member.regist.reset = \u30EA\u30BB\u30C3\u30C8
+
+min= {0}\u6587\u5B57\u4EE5\u4E0A
+max= {0}\u6587\u5B57\u4EE5\u4E0B
+size=\u6700\u5C0F{0}\u6587\u5B57\u304B\u3089{1}\u307E\u3067
